1999-02-01  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/gnus.el (gnus-version-number): Update to 6.10.057.

	* Sync up with Pterodactyl Gnus v0.75.

1999-02-01  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* lisp/gnus-offline.el (gnus-offline-gnus-get-new-news): Undo my
	change.

1999-02-01  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/gnus-offline.el (gnus-offline-define-menu-on-miee): Close
	parentheses.
	(gnus-offline-define-menu-on-agent): Ditto.

1999-02-01  Katsumi Yamaoka   <yamaoka@jpl.org>

	* README.ichikawa: Fix about the last version of T-gnus based on
	Gnus 5.6.

1999-02-01  Akihiro Arisawa   <ari@mei9.advantest.co.jp>

	* lisp/nndoc.el (nndoc-mime-digest-type-p): Add the element of
	`header-begin' to type-alist for mime-digest.

1999-02-01  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* README-offline.ja: Add description written by YOSHIZAWA Masahiro
	<manbou@ceres.dti.ne.jp>

1999-02-01  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>
            Tsukamoto Tetsuo  <czkmt@remus.dti.ne.jp>

	* lisp/gnus-offline.el (gnus-offline-gnus-get-new-news): Modify for
	pGnus with mail-source.el.

	* lisp/gnus-offline.el: Use (running-pterodactyl-gnus-0_73-or-later)
        to check pGnus 0.73 or later instead of (locate-library "mail-source")

1999-02-01  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/nndoc.el (nndoc-mime-parts-type-p): Strip leading white
	space from the matching pattern.

1999-02-01  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/gnus-sum.el (gnus-nov-parse-extra): Abolished.
	(gnus-nov-parse-line): Use `char-after' instead of `following-char'
	; use `nnheader-nov-parse-extra' instead of `gnus-nov-parse-extra'.

1999-01-31  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* lisp/gnus-sum.el: Abolish macro `gnus-nov-read-integer',
	`gnus-nov-skip-field' and `gnus-nov-field'.
	(gnus-nov-parse-line): Use `nnheader-nov-field' and
	`nnheader-nov-read-integer' instead of `gnus-nov-field' and
	`gnus-nov-read-integer'.
	(gnus-get-newsgroup-headers-xover): Use